tests/warning_exit_code/warning_exit_code.exp
Check Existing Server With Warnings (zero exit code):
Warning ---------------------------------------------------------------------------------------------------- test.js:4:5

Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-number]

   test.js:4:5
   4| if (x) {}
          ^

References:
   test.js:3:9
   3| var x: ?number = 0;
              ^^^^^^ [1]
   test.js:3:8
   3| var x: ?number = 0;
             ^^^^^^^ [2]



Found 1 warning

Check Existing Server With Warnings and --max-warnings 0 (nonzero exit code):
Warning ---------------------------------------------------------------------------------------------------- test.js:4:5

Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-number]

   test.js:4:5
   4| if (x) {}
          ^

References:
   test.js:3:9
   3| var x: ?number = 0;
              ^^^^^^ [1]
   test.js:3:8
   3| var x: ?number = 0;
             ^^^^^^^ [2]



Found 1 warning
Check Existing Server With Errors (nonzero exit code):
Error ------------------------------------------------------------------------------------------------------ test.js:4:5

Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-number]

   test.js:4:5
   4| if (x) {}
          ^

References:
   test.js:3:9
   3| var x: ?number = 0;
              ^^^^^^ [1]
   test.js:3:8
   3| var x: ?number = 0;
             ^^^^^^^ [2]



Found 1 error


Status (Running Server) With Warnings (zero exit code):
Warning ---------------------------------------------------------------------------------------------------- test.js:4:5

Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-number]

   test.js:4:5
   4| if (x) {}
          ^

References:
   test.js:3:9
   3| var x: ?number = 0;
              ^^^^^^ [1]
   test.js:3:8
   3| var x: ?number = 0;
             ^^^^^^^ [2]



Found 1 warning
Warning ---------------------------------------------------------------------------------------------------- test.js:4:5

Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-number]

   test.js:4:5
   4| if (x) {}
          ^

References:
   test.js:3:9
   3| var x: ?number = 0;
              ^^^^^^ [1]
   test.js:3:8
   3| var x: ?number = 0;
             ^^^^^^^ [2]



Found 1 warning
Warning ---------------------------------------------------------------------------------------------------- test.js:4:5

Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-number]

   test.js:4:5
   4| if (x) {}
          ^

References:
   test.js:3:9
   3| var x: ?number = 0;
              ^^^^^^ [1]
   test.js:3:8
   3| var x: ?number = 0;
             ^^^^^^^ [2]



Found 1 warning

Status (Running Server) With Errors (nonzero exit code):
Error ------------------------------------------------------------------------------------------------------ test.js:4:5

Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-number]

   test.js:4:5
   4| if (x) {}
          ^

References:
   test.js:3:9
   3| var x: ?number = 0;
              ^^^^^^ [1]
   test.js:3:8
   3| var x: ?number = 0;
             ^^^^^^^ [2]



Found 1 error


Status (No Running Server) With Warnings (zero exit code):
Warning ---------------------------------------------------------------------------------------------------- test.js:4:5

Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-number]

   test.js:4:5
   4| if (x) {}
          ^

References:
   test.js:3:9
   3| var x: ?number = 0;
              ^^^^^^ [1]
   test.js:3:8
   3| var x: ?number = 0;
             ^^^^^^^ [2]



Found 1 warning

Status (No Running Server) With Errors (nonzero exit code):
Error ------------------------------------------------------------------------------------------------------ test.js:4:5

Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-number]

   test.js:4:5
   4| if (x) {}
          ^

References:
   test.js:3:9
   3| var x: ?number = 0;
              ^^^^^^ [1]
   test.js:3:8
   3| var x: ?number = 0;
             ^^^^^^^ [2]



Found 1 error


Check Contents With Warnings (zero exit code):
Warning ---------------------------------------------------------------------------------------------------- test.js:4:5

Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-number]

   test.js:4:5
   4| if (x) {}
          ^

References:
   test.js:3:9
   3| var x: ?number = 0;
              ^^^^^^ [1]
   test.js:3:8
   3| var x: ?number = 0;
             ^^^^^^^ [2]



Found 1 warning
Warning ---------------------------------------------------------------------------------------------------- test.js:4:5

Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-number]

   test.js:4:5
   4| if (x) {}
          ^

References:
   test.js:3:9
   3| var x: ?number = 0;
              ^^^^^^ [1]
   test.js:3:8
   3| var x: ?number = 0;
             ^^^^^^^ [2]



Found 1 warning

Check Contents With Errors (nonzero exit code):
Error ------------------------------------------------------------------------------------------------------ test.js:4:5

Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-number]

   test.js:4:5
   4| if (x) {}
          ^

References:
   test.js:3:9
   3| var x: ?number = 0;
              ^^^^^^ [1]
   test.js:3:8
   3| var x: ?number = 0;
             ^^^^^^^ [2]



Found 1 error


